# ROS_multipleMyo

./: README.md
myoarmpose/: CMakeLists.txt  myoarmpose_node  package.xml  setup.py
myoarmpose/launch/: myoarmpose.launch
myoarmpose/msg/: Euler.msg
myoarmpose/nao_poses/: nao_arms_down.sh  nao_arms_rotate_backward.sh  nao_arms_rotate_forward.sh  nao_elbow_extended.sh  nao_elbow_flexed.sh  nao_elbow_hands_down.sh  nao_elbow_hands_inside.sh  nao_elbow_hands_outside.sh  nao_elbow_hands_up.sh
myoarmpose/nao_poses/tesina/: arms_reset_pose.sh
myoarmpose/src/myoarmpose/: __init__.py  myoarmpose_class.py
rosmyo/: CMakeLists.txt  package.xml  rosmyo_node  setup.py
rosmyo/launch/: rosmyo.launch
rosmyo/msg/: ClassifierArmSync.msg  ClassifierLocked.msg  ClassifierPose.msg  ClassifierSyncFailed.msg  Emg.msg
rosmyo/src/rosmyo/: __init__.py  bled112.py  myo.py  myo_comm.py  packet_serial.py  packets.py  rosmyo_class.py  uuid.py  waitables.py  worker_thread.py
